<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bordeTexto">
    <LinearLayout
        android:id="@+id/llDatos"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/interior"
        android:layout_margin="@dimen/marcodef"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="@dimen/tituloSp"
            android:textColor="@color/bordeTexto"
            android:padding="@dimen/marcodef"/>
        <EditText
            android:id="@+id/etAltura"
            android:layout_width="@dimen/dimens"
            android:layout_height="wrap_content"
            android:hint="@string/metros"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/etPeso"
            android:layout_width="@dimen/dimens"
            android:layout_height="wrap_content"
            android:hint="@string/kg"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/btnAct2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:onClick="onClickBtn"
            android:layout_margin="@dimen/marcodef"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llResultado"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/interior"
        android:layout_margin="@dimen/marcodef"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="@dimen/tituloSp"
            android:textColor="@color/bordeTexto"
            android:padding="@dimen/marcodef"/>
        <ImageView
            android:id="@+id/imgResult1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imc_correcto"
            android:layout_margin="@dimen/marcodef"
            android:visibility="visible"
            />
        <ImageView
            android:id="@+id/imgResult2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imc_sobrepeso"
            android:layout_margin="@dimen/marcodef"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/imgResult3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imc_obesidad"
            android:layout_margin="@dimen/marcodef"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btnNuevoCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_c_lculo"
            android:onClick="onClickBtn"
            />
        <Button
            android:id="@+id/btnFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_app"
            android:onClick="onClickBtn"
            />

    </LinearLayout>


</LinearLayout>